# KTensor

./: CMakeLists.txt  LICENSE  README.md
KTensor/: Auxiliary.hpp  CMakeLists.txt  Checks.hpp  Expression.hpp  Functions.hpp  IO.hpp  KTensor.hpp.in  Macros.hpp  NestedLoops.hpp  Operations.hpp  SpecialTensors.hpp
tests/: CMakeLists.txt  create_test_files.py
tests/compile_time_checks/: test_definitions.yaml
tests/correctness/: test_definitions.yaml
